--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bellmont University</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="destination.css">
+    <link rel="stylesheet" href="student_login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=manage_search" />
 </head>
@@ -13,7 +15,7 @@
         <nav>
             <a href="frontpage.html"><img src="img/LOGOME-removebg-preview.png"></a>
             <div class="nav-icons">
-                <button class="Login">Login</button>
+                <a href="Bellmont University.html"><button class="Login">Login</button></a>
                 <i class="fas fa-search"></i>
                 <i class="fas fa-bars"></i>
             </div>
@@ -47,7 +49,7 @@
                 <button class="read-more">Read more</button>
             </div>
         </div>
-
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
