--- a/Bellmont University.html
+++ b/Bellmont University.html
@@ -14,8 +14,8 @@
             <h1>Hi, Welcome Back!</h1>
             <h3>Please click or tap your destination.</h3>
             <div class="destination">
-                <a href="login.html"><button class="student">Student</button></a>
-                <a href="faculty.html"><button class="faculty">Faculty</button>
+                <a href="student_login.html"><button class="student">Student</button></a>
+                <a href="faculty_login.html"><button class="faculty">Faculty</button>
             </div>
             <p> By using this service, you understood and agree to the Bellmont University Online Services</p>
         </div>
